# BipartiteRegulatorProbing

./: .gitignore  Cargo.toml  EXAMPLE  LICENSE  Makefile  README.md  XXX  test.sh  testdata  testtime
jobs/: bprAll.sh  bprCov.sh  bprCovCompress.sh  bprCovNetwork.sh  bprCovNetwork16.sh  bprCovNetwork17.sh  bprCovNetwork18.sh  bprCovNetwork19.sh  bprCovNetwork20.sh  bprCovUniform.sh  bprFast.sh  bprGeneral.sh  bprMaxNetwork.sh  bprMaxUniform.sh  bprNetwork.sh  bprPoisson.sh  bprPoissonCov.sh  bprPoissonMaxSum.sh  bprPoissonSumFast.sh  bprPoly.sh  bprRest.sh  bprSumNetwork.sh  bprSumUniform.sh  bprTest.sh  bprTfNetwork.sh  bprTfNetworkFolder.sh  bprTfNetworkOcc.sh  bprTfNetworkRange.sh  bprTime.sh  bprUniform.sh  bruteforceFAST.sh  bruteforceNAMP.sh  comparisonALL.sh  comparisonPOLY.sh  createDataJob.sh  createSmallData.sh  inputtimes.sh  test.sh  tmpCP.sh
log/: testlog  testtimelog
logs/: COV_COMPRESSED
scripts/: bprParametersCompression.py  bprTime.py  bprTimeCompression.py  compressCovData.py  createData.py  fitTime.py  generalBpr.py  occ_tfs.py  parametersPlot.py  plotCov.py  plotTime.py  plotValues.py  plot_approx_all.py  plot_approx_single.py  plot_time_func.py  plot_time_single.py  plots.ipynb  realisticPoissonCoverage.py  requirements  timePlot.py  valuesPlot.py
src/: algorithms.rs  distributions.rs  helper.rs  ip.rs  lib.rs  main.rs  mdp.rs  model.rs  tf_networks.rs
tf_gene_networks/: ExampleRun_JSON.txt  FIMO_TFBS_Helper.py  FIMO_TFBS_inRegions.py  Format_MEME.py  Process_GTF.py  README.md  TFGeneNetwork.py  condaenv.yml  requirements.txt
(+42 files in other folders)
