[package]
name = "bpr"
version = "0.1.0"
authors = ["Lukas Geis <lukasgeis@gmx.de>"]
license = "MIT"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
rand = "0.8.3"
num = "0.4.0"
statrs = "0.16.0"
ez-bitset = "0.1.0"
serde = "1.0.167"
serde_json = "1.0.100"
serde_derive = "1.0.167"
rayon = "1.8.0"
num_cpus = "1.16.0"

[[bin]]
name = "tf_networks"
path = "src/tf_networks.rs"
test = false
