[package]
name = "bpr"
version = "0.1.0"
authors = ["Lukas Geis <lukasgeis@gmx.de>"]
license = "MIT"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
num = "0.4.0"
statrs = "0.16.0"
ez-bitset = "0.1.0"
serde = "1.0.167"
serde_json = "1.0.100"
serde_derive = "1.0.167"
rayon = "1.8.0"
num_cpus = "1.16.0"
itertools = "0.14.0"
rand_pcg = "0.9.0"
rand = "0.9.1"

[[bin]]
name = "tf_networks"
path = "src/tf_networks.rs"
test = false
